# nftsol

./: .env.bak.20251006071407  .env.bak.20251006071737  .env.bak.20251006075051  .env.example  .env.txt  .gitattributes  .gitignore  .npmrc  API_KEYS_SETUP.md  AUTOSCALE_DEPLOYMENT_GUIDE.md  AUTO_DEPLOY_INSTRUCTIONS.md  App.java  CLOUT_SECURITY_GUIDE.md  CLOUT_SYSTEM_LIVE.md  CLOUT_TOKEN_DEPLOYMENT_GUIDE.md  CLOUT_TOKEN_DEPLOYMENT_ISSUE.md  CLOUT_TREASURY_SETUP_COMPLETE.md  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_AUDIT_RESULTS.md  COMPREHENSIVE_AUDIT_ROADMAP.md  CREATOR_INCENTIVES_GUIDE.md  CRITICAL_MISSING_FEATURES.md  DEPLOYMENT.md  DEPLOYMENT_ADVANCED.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_URL_GUIDE.md  DEPLOY_TO_NFTSOL_APP.md  DEVELOPER_WALLET_SETUP.md  DOMAIN_CONNECTION.md  Dockerfile.backend  Dockerfile.frontend  GITHUB_SETUP.md  LAUNCH_CHECKLIST.md  LICENSE  MOBILE_WALLET_FIX_COMPLETE.md  NETLIFY_DEPLOYMENT.md  NFTSOL_COMPLETE_OVERVIEW.md  NFTSOL_DEPLOYMENT_READY.md  NFTSOL_ROADMAP.md  (+56 more)
.scripts/: scan-and-install-missing.mjs
admin-dashboard/: .env.example
anchor/solana_rewards/: Anchor.toml  Cargo.toml
anchor/solana_rewards/programs/clout_staking/: Cargo.toml
anchor/solana_rewards/programs/clout_staking/src/: lib.rs
anchor/solana_rewards/programs/loyalty_registry/: Cargo.toml
anchor/solana_rewards/programs/loyalty_registry/src/: lib.rs
anchor/solana_rewards/programs/market_escrow/: Cargo.toml
anchor/solana_rewards/programs/market_escrow/src/: lib.rs
anchor/solana_rewards/programs/rewards_vault/: Cargo.toml
anchor/solana_rewards/programs/rewards_vault/src/: lib.rs
anchor/solana_rewards/tests/: rewards_vault.smoke.ts  rewards_vault.spec.ts
attached_assets/: Pasted--OkHttp-Integration-Sentry-for-Spring-To-be-able-to-capture-transactions-you-ll-need-to-first-1754157217780_1754157217780.txt  README_1754097281555.md  index_1754097317196.html  package_1754097281555.json
backend-advanced/: .env.example
client/: .env.bak.20251006075051  index.html  package-lock.json  vite.config.netlify.js
docs/: anchor-program-spec.md  anchor-roadmap.md  clout-rewards-math.md  full-stack-review.md  platform-wallets.md  solana-rewards-integration.md
frontend/: .env.bak.20251006075051  .env.example  vite.config.js
java/: build.gradle
patches/: fast-redact+3.5.0.patch
scripts/: auto-deploy-monitor.js  check-token-status.js  deploy-clout-simple.js  deploy-clout-token.js  generate-anchor-clients.mjs  generateCSVReport.js  optimize-and-deploy.sh  run-anchor-build.mjs  simulateResale.js  start-auto-deploy.js  test-server.js
server/: ai-enhancement-api.ts  ai-features-service.ts  ai-metadata-service.ts  auth-security.ts  clout-system.ts  db.ts  enhanced-public-apis.ts  enhanced-solana-api.ts  external-apis.ts  helius-api.ts  index.ts  index.ts.backup  index.ts.bak.20251006094910  instrument.js  instrument.mjs  magic-eden-api.ts  moralis-api.ts  nft-routes.ts  nft-routes.ts.bak.20251006101539  nft-routes.ts.bak.20251006103326  nft-routes.ts.partial.bak  pricing-analytics.ts  public-apis.ts  quicknode-api.ts  recommendation-engine.ts  routes.ts  security-middleware.ts  security-monitoring.ts  simplehash-api.ts  social-trading-api.ts  solana-assets.ts  solana-nft-api.ts  solana-rewards-provider.ts  solana-rewards-service.ts  solscan-api.ts  storage.ts  storage.ts.bak  tsconfig.json  wallet-config.ts  wallet-system.ts  (+1 more)
shared/: nft-schema.ts  (+2 more)
(+135 files in other folders)
